<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.salesianoscadiz.dam2.penagarciajosemanuel.actividadDos"
    android:id="@+id/fondo2"
    android:background="#EEEE8F">

    <TextView
        android:text="@string/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/titulo2"
        android:textColor="#0070C0"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Switch
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:id="@+id/estado"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold"
        android:layout_below="@+id/titulo2"
        android:layout_alignLeft="@+id/titulo2"
        android:layout_alignStart="@+id/titulo2"
        android:layout_marginTop="40dp"
        android:background="#D9D9D9"
        android:layout_marginLeft="23dp" />

    <Button
        android:layout_width="110dp"
        android:layout_height="33dp"
        android:text="@string/calcular"
        android:background="#3D79C1"
        android:textColor="#FFFFFF"
        android:id="@+id/calcular"
        android:layout_marginTop="45dp"
        android:textStyle="bold"
        android:onClick="showText"
        android:layout_below="@+id/estado"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cajatexto"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:background="#DCE6F2"
        android:layout_below="@+id/calcular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="110dp"
        android:layout_height="33dp"
        android:text="@string/regresar"
        android:background="#3D79C1"
        android:textColor="#FFFFFF"
        android:id="@+id/regresar"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:onClick="showText"
        android:layout_below="@+id/cajatexto"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
