<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Principal"
    android:background="#EEEE8F"
    android:id="@+id/fondo">

    <TextView
        android:text="@string/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/titulo"
        android:textColor="#0070C0"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:id="@+id/edad"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@+id/titulo"
        android:layout_alignLeft="@+id/titulo"
        android:layout_alignStart="@+id/titulo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/insertaedad"
        android:layout_below="@+id/titulo"
        android:layout_toRightOf="@+id/edad"
        android:layout_toEndOf="@+id/edad"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numHijos"
        android:id="@+id/numHijos"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@+id/edad"
        android:layout_alignRight="@+id/edad"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/insertaHijos"
        android:layout_below="@+id/insertaedad"
        android:layout_toRightOf="@+id/numHijos"
        android:layout_toEndOf="@+id/numHijos"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp" />

</RelativeLayout>
